Fix alignment of Add sig button in Chrome

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -385,3 +385,11 @@ ul#moveDropdown li {
   padding-top: 0;
 }
 
+#id_sigid { 
+	width: 100px;	
+}
+
+.sigAddFormDiv {
+	margin-left: 25px;	
+}
+
